# AutoIP

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  release_changelog.txt
.github/workflows/: build.yml  c-cpp.yml
include/: socket.h
src/: source.cpp
